--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -1,8 +1,114 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 header aside section article footer {
     display: block;
 }
 
 body {
+    width: 100%;
+    background-color: #dee5ed;
+
+	display: -moz-box;
+    display: -o-box;
+    display: -webkit-box;
+
+    -moz-box-pack: center;
+    -o-box-pack: center;
+    -webkit-box-pack: center;
+}
+
+a:link {
+    color: #4977a7;
+    text-decoration: none;  
+} 
+
+a, a:active, a:visited {
+    color: #4977a7;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #4977a7;
+    text-decoration: underline;
+}
+
+#wrapper {
+    max-width: 940px;
+    background-color: #5b93ce;
+    
+    -o-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
+}
+
+#white_background {
+    background-color: #ffffff;
+}
+
+#real_header {
     margin: 0px;
-    padding: 0px;
+    padding 0px;
+    width: 100%;
+    
+    display: -o-box;
+    display: -moz-box;
+    display: -webkit-box;
+    
+    -o-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -webkit-box-orient: horizontal;    
+}
+
+#main_header {
+    margin: 15px 15px;
+    color: #4977a7;
+    width: 160px;
+}
+
+#main_header h1 {
+    font: bold 24px Verdana, Sans-Serif;
+    text-align: center;
+}
+
+
+#main_header h2 {
+    font: 12px Verdana, Sans-Serif;
+    text-align: center;
+}
+
+#main_nav {
+    font: bold 16px Verdana, Sans-Serif;
+}
+
+#main_nav li {
+    display: inline-block;
+    list-style: none;
+    margin: 30px 10px 25px 0px;
+    padding: 2px 35px 2px 15px;
+    border-right: solid 1px #5b93ce;
+    text-align: center;
+}
+
+#main_nav li:first-child {
+    margin-left: 30px;
+}
+
+#main_nav li:last-child {
+    border-right: 0px;
+}
+
+#main_nav a {
+    color: #4977a7;
+    background-color: #ffffff;
+    padding: 2px 10px;
+}
+
+#main_nav a:hover {
+    color: #ffffff;
+    background-color: #5b93ce;
+    border-radius: 25px;
+    padding: 2px 10px;
 }
