Added first style

--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -1,1 +1,26 @@
+.navbar-default {
+    background-color: #5b93ce;
+}
 
+.navbar-default .navbar-brand {
+    color: #ffffff;
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: #ffffff;
+}
+
+.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
+    color: #5b93ce;
+    background-color: #DEE5ED;
+}
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover {
+    color: #5b93ce;
+    background-color: #ffffff;
+}
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover {
+    color: #5b93ce;
+    background-color: #ffffff;
+}
