--- a/web/static/css/sticky-footer-navbar.css
+++ b/web/static/css/sticky-footer-navbar.css
@@ -14,7 +14,7 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
-  background-color: #5b93ce;
+  background-color: #f5f5f5;
 }
 
 
