--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -99,6 +99,10 @@
 	margin: 30px 0px 30px 0px;
 }
 
+.title-page {
+	color: #5b93ce;
+}
+
 @media (max-width: 767px) {
 	.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus,
 	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
